--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -47,6 +47,192 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="60" data-price="9.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KbLUK8"><img src="https://m.media-amazon.com/images/I/71tkkglWthL._SR400,400_.jpg" alt="Long Sleeve Plaid T Shirt" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>78 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KbLUK8">EMVANV Women's Casual Loose Long Sleeve Plaid T Shirt Dress with Pockets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.20</span><span class="ori_price">$22.99</span></address>
+      <textarea readonly="readonly" class="code_area">60CBJG9H</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $22.99</strong> with promo code: <strong class="m_codes">60CBJG9H</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KbLUK8">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="6.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2yuciIL"><img src="https://m.media-amazon.com/images/I/61ggg6ntEeL._SR400,400_.jpg" alt="BrexLink Type C to Type C Cable" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>107 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2yuciIL">BrexLink Type C to Type C Cable (6.6ft) Fast Charge USB C to USB C Cable Compatible Google Pixel 2,Pixel 2XL,Pixel...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.00</span><span class="ori_price">$11.99</span></address>
+      <textarea readonly="readonly" class="code_area">50SBLSBL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $11.99</strong> with promo code: <strong class="m_codes">50SBLSBL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2yuciIL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2yvlKLQ"><img src="https://m.media-amazon.com/images/I/81MXxk4FTcL._SR400,400_.jpg" alt="Obbug Laptop Backpack" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-3_5.jpg' %>"><p>3 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2yvlKLQ">Obbug Laptop Backpack, Travel Computer Bag, Anti Theft Water Resistant College School Bookbag,Business Backpack USB...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">40ZK8D62</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $29.99</strong> with promo code: <strong class="m_codes">40ZK8D62</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2yvlKLQ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="11.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33hzOqC"><img src="https://m.media-amazon.com/images/I/61xCXKLJ7vL._SR400,400_.jpg" alt="ZLOT Rechargeable Ergonomic Mouse" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33hzOqC">ZLOT Rechargeable Ergonomic Mouse, 2.4G USB Optical LED Vertical Wireless Mice with 3 Adjustable DPI 1000/1600/2400 ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$11.89</span><span class="ori_price">$16.99</span></address>
+      <textarea readonly="readonly" class="code_area">302NMOW2</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $16.99</strong> with promo code: <strong class="m_codes">302NMOW2</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33hzOqC">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YBTSjT"><img src="https://m.media-amazon.com/images/I/61Anxk4X95L._SR400,400_.jpg" alt="NUBWO N2 Gaming Headset" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>2,261 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YBTSjT">NUBWO N2 Gaming Headset for Xbox One PS4 Playstation 4, Headphones Computer PC Mic Stereo Fortnite Gamer Microphone ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">503SVJO1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">503SVJO1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YBTSjT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="55.08">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Zr5Lu4"><img src="https://m.media-amazon.com/images/I/610PNNKNL7L._SR400,400_.jpg" alt="Secura Automatic Electric Conical Burr Coffee Grinder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>12 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Zr5Lu4">Secura Automatic Electric Conical Burr Coffee Grinder, Adjustable Cup Size, 18 Fine Coarse Grind Size Settings</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$55.08</span><span class="ori_price">$78.68</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30ZS35W3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $78.68</strong> with promo code: <strong class="m_codes">30ZS35W3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Zr5Lu4">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="7.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YmtCyt"><img src="https://m.media-amazon.com/images/I/51p9Fn9wYGL._SR400,400_.jpg" alt="Agvee 3A Heavy Duty USB C Charging Cable" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>879 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YmtCyt">Agvee 3A Heavy Duty USB C Charging Cable [3 Pack 10ft] Seamless Reinforced USBC End Tip, Braided Type C Fast Charger Cord,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.20</span><span class="ori_price">$15.99</span></address>
+      <textarea readonly="readonly" class="code_area">55GGGGGG</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>55% off at $15.99</strong> with promo code: <strong class="m_codes">55GGGGGG</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YmtCyt">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/3376dQm"><img src="https://m.media-amazon.com/images/I/711cZ68ctoL._SR400,400_.jpg" alt="Makeup Brushes" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>43 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/3376dQm">Makeup Brushes 12 Pcs Premium Synthetic Bristle Foundation Powder Concealers Eye Shadows Makeup Brush Sets...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">50APQCR6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50APQCR6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 02, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/3376dQm">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="7.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZtjNeD"><img src="https://images-na.ssl-images-amazon.com/images/I/6125xY12rgL._SL1000_.jpg" alt="laamei Dog Water Bottle" /></a>
+    <div class="rating"><p>0 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZtjNeD">laamei Dog Water Bottle, Pet Water Dispenser Feeder, Portable Pet Travel Water Drink Cup Mug Dish Bowl Dispenser ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.79</span><span class="ori_price">$12.99</span></address>
+      <textarea readonly="readonly" class="code_area">40ACG4FA</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $12.99</strong> with promo code: <strong class="m_codes">40ACG4FA</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZtjNeD">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="18.69">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ywXQ2L"><img src="https://m.media-amazon.com/images/I/71T3F0hvz3L._SR400,400_.jpg" alt="Nulaxy KM12 Bluetooth Keyboard " /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>779 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ywXQ2L">Nulaxy KM12 Bluetooth Keyboard Business Portable Rechargeable Compatible with Apple iPad iPhone Samsung Tablets...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.69</span><span class="ori_price">$21.99</span></address>
+      <textarea readonly="readonly" class="code_area">15LZ5RB6</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $21.99</strong> with promo code: <strong class="m_codes">15LZ5RB6</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ywXQ2L">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="28" data-price="12.92">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2ZpCgJ6"><img src="https://m.media-amazon.com/images/I/61yrsXLA4OL._SR400,400_.jpg" alt="Radha Beauty Retinol Moisturizer Cream" /></a>
