--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -332,3 +332,98 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Zug5Sf">Use Code at Amazon</a></div>
 </div>
 
+<div class="card clearfix" data-score="50" data-price="7.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZAaY32"><img src="https://m.media-amazon.com/images/I/6118PhPvsFL._SR400,400_.jpg" alt="Aoremon Replacement Brush Heads" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>108 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZAaY32">Aoremon Replacement Brush Heads Compatible with Sonicare DiamondClean, Fit Philips Sonicare 2 Series, 3 Series, HealthyWhite,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.80</span><span class="ori_price">$15.60</span></address>
+      <textarea readonly="readonly" class="code_area">50IFB1RH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $15.60</strong> with promo code: <strong class="m_codes">50IFB1RH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZAaY32">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="12.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KmAqm1"><img src="https://m.media-amazon.com/images/I/71QofyoAmSL._SR400,400_.jpg" alt="Duffel Bag" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>38 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KmAqm1">S-ZONE 17inch Carry on Lightweight Small Weekender Duffel Bag Travel Size Sports Durable Gym Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.00</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">60WD4TMM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $29.99</strong> with promo code: <strong class="m_codes">60WD4TMM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 14, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KmAqm1">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="25.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YIxiWZ"><img src="https://m.media-amazon.com/images/I/71I0wR-S8PL._SR400,400_.jpg" alt="The Best Deal]Water Flosser Cordless Dental Water" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>125 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YIxiWZ">Water Flosser Cordless Dental Water Pick for Teeth Cleaning Rechargeable with 4 Jet Tips,200ml Reservoir...  </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$25.89</span><span class="ori_price">$36.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">308HJIIM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $36.99</strong> with promo code: <strong class="m_codes">308HJIIM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 03, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YIxiWZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="54.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZEVaf2"><img src="https://m.media-amazon.com/images/I/71ddHJyEcOL._SR400,400_.jpg" alt="Visoud Mini Portable Projector" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>79 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZEVaf2">Visoud Mini Portable Projector, 2200 lumen Full HD LED Video Projector Compatible with HDMI, VGA, USB, AV, SD for Home Theater Entertainment</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$54.99</span><span class="ori_price">$109.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">50S8W7YQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $109.99</strong> with promo code: <strong class="m_codes">50S8W7YQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date :  Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZEVaf2">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="22.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YIxxBn"><img src="https://m.media-amazon.com/images/I/5125oDtrozL._SR400,400_.jpg" alt="Outdoor Security Camera" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>39 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YIxxBn">Outdoor Security Camera, 1080P WiFi Camera Wireless Surveillance Cameras, IP Camera with Two-Way Audio, IP66 Waterproof,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.19</span><span class="ori_price">$36.99</span></address>
+      <textarea readonly="readonly" class="code_area">40UFTNCL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $36.99</strong> with promo code: <strong class="m_codes">40UFTNCL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YIxxBn">Use Code at Amazon</a></div>
+</div>
