--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -43,7 +43,7 @@
   .codes .rt_cnt .updating a{text-decoration:none;margin-left:10px;color:#fff;background:#000;padding:5px 10px;}
 
   .codes .card_wrap{margin:20px 0 0 0;}
-  .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding-bottom:10px;height:270px;}
+  .codes .card_wrap .card{border-bottom:1px solid #ccc;margin:0 0 15px 0;padding:20px 0 30px 0;}
   .codes .card_wrap .dealofday{height:auto;}
   .codes .card_wrap .card .image_box{float:left;width:20%;height:167px;padding:1.5%;}
   .codes .card_wrap .card .image_box img{width:100%;height:167px;object-fit:contain;}
