--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -6,7 +6,7 @@
   <div class="promotions editors_pick common_layout clearfix">
     <%= render 'deals/navbar_editor' %>
     <div class="filter-group guide_wrap">
-      <%= render 'deals/body_editors_pick' %>
+      <%= render 'deals/body_most_reviewed' %>
     </div><!--./filter-group-->
   </div>
 
